--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.2",
-    "@angular/compiler": "^2.4.2",
-    "@angular/core": "^2.4.2",
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/core": "^2.4.9",
     "@angular/flex-layout": "^2.0.0-beta.1",
-    "@angular/forms": "^2.4.2",
-    "@angular/http": "^2.4.2",
+    "@angular/forms": "^2.4.9",
+    "@angular/http": "^2.4.9",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.4.2",
-    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "^3.4.2",
     "core-js": "^2.4.1",
     "quagga": "^0.11.5",
@@ -30,10 +30,10 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.2",
+    "@angular/cli": "^1.0.0-rc.1",
+    "@angular/compiler-cli": "^2.4.9",
     "@types/jasmine": "^2.5.40",
     "@types/node": "^6.0.58",
-    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "^3.0.0",
