--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "ng2-barcode-validator",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "@angular/flex-layout": "^2.0.0-beta.1",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.9",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/router": "^3.4.2",
-    "core-js": "^2.4.1",
-    "quagga": "^0.11.5",
-    "rxjs": "^5.0.3",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
-    "@angular/compiler-cli": "^2.4.9",
-    "@types/jasmine": "^2.5.40",
-    "@types/node": "^6.0.58",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "^3.0.0",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.4.0",
-    "protractor": "~4.0.13",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.4"
-  }
+    "name": "ng2-barcode-validator",
+    "version": "0.2.0",
+    "license": "MIT",
+    "angular-cli": {},
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "lint": "tslint \"src/**/*.ts\"",
+        "test": "ng test",
+        "pree2e": "webdriver-manager update --standalone false --gecko false",
+        "e2e": "protractor"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/common": "^4.0.0-rc.3",
+        "@angular/compiler": "^4.0.0-rc.3",
+        "@angular/core": "^4.0.0-rc.3",
+        "@angular/flex-layout": "^2.0.0-beta.1",
+        "@angular/forms": "^4.0.0-rc.3",
+        "@angular/http": "^4.0.0-rc.3",
+        "@angular/material": "^2.0.0-beta.1",
+        "@angular/platform-browser": "^4.0.0-rc.3",
+        "@angular/platform-browser-dynamic": "^4.0.0-rc.3",
+        "@angular/router": "^4.0.0-rc.3",
+        "core-js": "^2.4.1",
+        "quagga": "^0.11.6",
+        "rxjs": "^5.2.0",
+        "ts-helpers": "^1.1.1",
+        "zone.js": "^0.8.4"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.0.0-rc.2",
+        "@angular/compiler-cli": "^4.0.0-rc.3",
+        "@types/jasmine": "^1.3.2",
+        "@types/node": "^7.0.8",
+        "codelyzer": "~2.0.0-beta.1",
+        "jasmine-core": "2.5.2",
+        "jasmine-spec-reporter": "^3.0.0",
+        "karma": "^1.3.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-cli": "^1.0.1",
+        "karma-jasmine": "^1.0.2",
+        "karma-remap-istanbul": "^0.4.0",
+        "protractor": "~4.0.13",
+        "ts-node": "^2.0.0",
+        "tslint": "^4.3.1",
+        "typescript": "^2.1.4"
+    }
 }
