--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular/animations": "^4.0.0-rc.3",
         "@angular/common": "^4.0.0-rc.3",
         "@angular/compiler": "^4.0.0-rc.3",
         "@angular/core": "^4.0.0-rc.3",
