--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^4.0.0-rc.5",
-        "@angular/common": "^4.0.0-rc.5",
-        "@angular/compiler": "^4.0.0-rc.5",
-        "@angular/core": "^4.0.0-rc.5",
+        "@angular/animations": "^4.0.0",
+        "@angular/common": "^4.0.0",
+        "@angular/compiler": "^4.0.0",
+        "@angular/core": "^4.0.0",
         "@angular/flex-layout": "^2.0.0-beta.1",
-        "@angular/forms": "^4.0.0-rc.5",
-        "@angular/http": "^4.0.0-rc.5",
-        "@angular/material": "^2.0.0-beta.1",
-        "@angular/platform-browser": "^4.0.0-rc.5",
-        "@angular/platform-browser-dynamic": "^4.0.0-rc.5",
-        "@angular/router": "^4.0.0-rc.5",
+        "@angular/forms": "^4.0.0",
+        "@angular/http": "^4.0.0",
+        "@angular/material": "2.0.0-beta.1",
+        "@angular/platform-browser": "^4.0.0",
+        "@angular/platform-browser-dynamic": "^4.0.0",
+        "@angular/router": "^4.0.0",
         "core-js": "^2.4.1",
         "quagga": "^0.11.6",
         "rxjs": "^5.2.0",
@@ -31,9 +31,9 @@
         "zone.js": "^0.8.4"
     },
     "devDependencies": {
-        "@angular/cli": "^1.0.0-rc.2",
-        "@angular/compiler-cli": "^4.0.0-rc.5",
-        "@types/jasmine": "^1.3.2",
+        "@angular/cli": "^1.0.0",
+        "@angular/compiler-cli": "^4.0.0",
+        "@types/jasmine": "^2.5.46",
         "@types/node": "^7.0.8",
         "codelyzer": "~2.0.0-beta.1",
         "jasmine-core": "2.5.2",
@@ -42,10 +42,10 @@
         "karma-chrome-launcher": "^2.0.0",
         "karma-cli": "^1.0.1",
         "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.4.0",
-        "protractor": "~4.0.13",
-        "ts-node": "^2.0.0",
+        "karma-remap-istanbul": "^0.6.0",
+        "protractor": "^5.1.1",
+        "ts-node": "^3.0.2",
         "tslint": "^4.3.1",
-        "typescript": "^2.1.4"
+        "typescript": "^2.2.1"
     }
 }
