--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-    "name": "ng2-barcode-validator",
-    "version": "0.2.0",
-    "license": "MIT",
-    "angular-cli": {},
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "lint": "tslint \"src/**/*.ts\"",
-        "test": "ng test",
-        "pree2e": "webdriver-manager update --standalone false --gecko false",
-        "e2e": "protractor"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^4.2.6",
-        "@angular/common": "^4.2.6",
-        "@angular/compiler": "^4.2.6",
-        "@angular/core": "^4.2.6",
-        "@angular/flex-layout": "^2.0.0-beta.1",
-        "@angular/forms": "^4.2.6",
-        "@angular/http": "^4.2.6",
-        "@angular/material": "2.0.0-beta.1",
-        "@angular/platform-browser": "^4.2.6",
-        "@angular/platform-browser-dynamic": "^4.2.6",
-        "@angular/router": "^4.2.6",
-        "core-js": "^2.4.1",
-        "quagga": "^0.11.6",
-        "rxjs": "^5.4.0",
-        "ts-helpers": "^1.1.1",
-        "zone.js": "^0.8.10"
-    },
-    "devDependencies": {
-        "@angular/cli": "^1.2.0",
-        "@angular/compiler-cli": "^4.2.6",
-        "@types/jasmine": "^2.5.46",
-        "@types/node": "^7.0.8",
-        "codelyzer": "~2.0.0-beta.1",
-        "jasmine-core": "2.5.2",
-        "jasmine-spec-reporter": "^3.0.0",
-        "karma": "^1.3.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.6.0",
-        "protractor": "^5.1.1",
-        "ts-node": "^3.0.2",
-        "tslint": "^4.3.1",
-        "typescript": "^2.2.1"
-    }
+  "name": "ng2-barcode-validator",
+  "author": "Majid Hajian",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --aot",
+    "build": "ng build --aot --prod",
+    "lint": "ng lint",
+    "test": "ng test",
+    "e2e": "protractor"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^5.0.5",
+    "@angular/cdk": "^5.0.0-rc.2",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/material": "^5.0.0-rc.2",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "core-js": "^2.5.1",
+    "hammerjs": "^2.0.8",
+    "quagga": "^0.12.1",
+    "rxjs": "^5.5.3",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.18"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.5.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@types/jasmine": "^2.8.2",
+    "@types/node": "^8.0.53",
+    "codelyzer": "~4.0.1",
+    "ts-helpers": "^1.1.2",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.2.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.4.2"
+  }
 }
