--- a/package.json
+++ b/package.json
@@ -14,42 +14,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.5",
-    "@angular/cdk": "^5.0.0-rc.2",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
-    "@angular/material": "^5.0.0-rc.2",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/router": "^5.0.5",
-    "core-js": "^2.5.1",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "quagga": "^0.12.1",
-    "rxjs": "^5.5.3",
+    "rxjs": "^5.5.8",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.23"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.5",
-    "@angular/compiler-cli": "^5.0.5",
-    "@types/jasmine": "^2.8.2",
-    "@types/node": "^8.0.53",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.2.9",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.6.1",
     "angular-cli-ghpages": "^0.5.2",
-    "codelyzer": "~4.0.1",
+    "codelyzer": "^4.2.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^1.7.1",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "^5.2.0",
+    "protractor": "^5.3.0",
     "ts-helpers": "^1.1.2",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.4.2"
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1"
   }
 }
