--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ng2-barcode-validator",
+  "name": "ngx-barcode-validator",
   "author": "Majid Hajian",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -10,46 +10,48 @@
     "deploy": "ng build --aot --prod --base-href '/ng2-barcode-validator/' && angular-cli-ghpages",
     "lint": "ng lint",
     "test": "ng test",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "dev": "docker-compose up -d ngx-barcode-scanner",
+    "prod": "docker-compose up -d ngx-barcode-scanner-prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "core-js": "^2.5.4",
+    "@angular/animations": "6.0.6",
+    "@angular/cdk": "^6.3.0",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
+    "@angular/material": "^6.3.0",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/router": "6.0.6",
+    "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "quagga": "^0.12.1",
-    "rxjs": "^5.5.8",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.23"
+    "rxjs": "^6.2.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular-devkit/build-angular": "~0.6.8",
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.1",
     "angular-cli-ghpages": "^0.5.2",
-    "codelyzer": "^4.2.1",
-    "jasmine-core": "2.8.0",
+    "codelyzer": "^4.3.0",
+    "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.0",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "^5.3.0",
+    "protractor": "^5.3.2",
     "ts-helpers": "^1.1.2",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "ts-node": "^7.0.0",
+    "tslint": "^5.10.0",
+    "typescript": "2.7.2"
   }
 }
