fix test for running on chrome headless

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "deploy": "ng build --aot --prod --base-href '/ng2-barcode-validator/' && angular-cli-ghpages",
     "lint": "ng lint",
     "test": "ng test",
+    "test:ci": "ng test --browser ChromeHeadlessCI --code-coverage=true --single-run=true --watch=false",
     "e2e": "protractor",
-    "dev": "docker-compose up -d ngx-barcode-scanner",
+    "dev": "docker-compose up ngx-barcode-scanner",
     "prod": "docker-compose up -d ngx-barcode-scanner-prod"
   },
   "private": true,
@@ -43,6 +44,8 @@
     "codelyzer": "^4.3.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
+    "karma-jasmine-html-reporter": "^1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.1.0",
     "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
